# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  configuration.yaml  rustfmt.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: release.yaml
.sqlx/: query-0f5f19495dccdccfa64e5d1dc97ae7c84b8aedf301639260f92c0c7f0df86055.json  query-1fc498c8ccbf46f3e00b915e3b3973eb8d44a83a7df6dd7744dc56a2e94a0aa5.json  query-32701e61ea14e25608b5f6b05289d08d422e9629d6aee98ac1dcbd50f1edbfe1.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240201011126_create_subscriptions_table.sql  20240402005444_make_status_not_null_in_subscriptions.sql  20240402023230_create_subscription_tokens_table.sql  20240407051732_create_user_table.sql  20240410062856_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: home.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  password.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: test_health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
