[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# webframework
actix-web = "4.4.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# config
config = "0.14.0"
# serialize & deserialize
serde = { version = "1.0.195", features = ["derive"] }
# postgres
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
# logging
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.10"
# etc
uuid = { version = "1.7.0", features = ["v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = "0.17.0"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
thiserror = "1.0.58"
anyhow = "1.0.81"

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng", "std"] }
serde_json = "1.0.115"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6.0"
